@@ -1,5 +1,6 @@
 0.16.7 release
 
+	* handle error in read_piece and set_piece_deadline when torrent is removed
 	* DHT performance improvement
 	* attempt to handle ERROR_CANT_WAIT disk error on windows
 	* improve peers exchanged over PEX
